--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Ignore virtual environment
 /venv/
+/igg
 
 # Ignore IDE files
 .vscode/
@@ -26,6 +27,12 @@
 .env
 input.css
 
+# Ignore celery beat schedule
+celerybeat-schedule
+
 # Ignore npm files
 node_modules/
 package-lock.json
+
+# Ignore test files
+test.py
